[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/config_panel.gd" type="Script" id=1]
[ext_resource path="res://gfx/ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://gfx/ui/music.png" type="Texture" id=3]
[ext_resource path="res://gfx/ui/music_p.png" type="Texture" id=4]
[ext_resource path="res://gfx/ui/sound.png" type="Texture" id=5]
[ext_resource path="res://gfx/ui/sound_p.png" type="Texture" id=6]
[ext_resource path="res://gfx/button_close.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 0.524588 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Theme" id=2]

Panel/styles/panel = SubResource( 1 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[sub_resource type="Animation" id=3]

resource/name = "hide"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Center/PanelPosition:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -500 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "update":1, "values":[ false ] }

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Center/PanelPosition:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, -500 ), Vector2( 0, 20 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }

[node name="ConfigPanel" type="Panel"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
EnableReset = false

[node name="Center" type="Control" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="PanelPosition" type="Node2D" parent="Center"]

transform/pos = Vector2( 0, 20 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = 10

[node name="Panel" type="Panel" parent="Center/PanelPosition"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/min_size = Vector2( 800, 520 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 436.0
margin/top = 292.0
margin/right = -368.0
margin/bottom = -228.0

[node name="Music" type="TextureButton" parent="Center/PanelPosition/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 81.0
margin/top = 51.0
margin/right = 209.0
margin/bottom = 179.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )

[node name="MusicVolume" type="HSlider" parent="Center/PanelPosition/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 84.0
margin/right = 709.0
margin/bottom = 148.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 10
ticks_on_borders = false
focus_mode = 2

[node name="Sound" type="TextureButton" parent="Center/PanelPosition/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 81.0
margin/top = 195.0
margin/right = 209.0
margin/bottom = 323.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )

[node name="SoundVolume" type="HSlider" parent="Center/PanelPosition/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 234.0
margin/top = 228.0
margin/right = 713.0
margin/bottom = 292.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 10
ticks_on_borders = false
focus_mode = 2

[node name="ResetProgress" type="Button" parent="Center/PanelPosition/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 351.0
margin/right = 683.0
margin/bottom = 477.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset progress"
flat = false

[node name="Close" type="TextureButton" parent="Center/PanelPosition/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 739.0
margin/top = 12.0
margin/right = 790.0
margin/bottom = 63.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 7 )
params/scale = Vector2( 0.25, 0.25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )
next/hide = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="toggled" from="Center/PanelPosition/Panel/Music" to="." method="_on_Music_toggled"]

[connection signal="value_changed" from="Center/PanelPosition/Panel/MusicVolume" to="." method="_on_MusicVolume_value_changed"]

[connection signal="toggled" from="Center/PanelPosition/Panel/Sound" to="." method="_on_Sound_toggled"]

[connection signal="value_changed" from="Center/PanelPosition/Panel/SoundVolume" to="." method="_on_SoundVolume_value_changed"]

[connection signal="pressed" from="Center/PanelPosition/Panel/ResetProgress" to="." method="_on_ResetProgress_pressed"]

[connection signal="pressed" from="Center/PanelPosition/Panel/Close" to="AnimationPlayer" method="play" binds= [ "hide" ]]


